tests/ui/const-generics/bad-subst-const-kind.stderr
error: the constant `N` is not of type `usize`
  --> $DIR/bad-subst-const-kind.rs:8:26
   |
LL | impl<const N: u64> Q for [u8; N] {
   |                          ^^^^^^^ expected `usize`, found `u64`

error: aborting due to previous error

